--- a/index.html
+++ b/index.html
@@ -17,24 +17,47 @@
       <div class="container">
    
         <div class="songList">
-            <h1>Man meri jan latest song</h1>
-              <div>
+            <h1>Best trending song in india </h1>
+              <div class="songItemContainer">
                 <div class="songItem">
                     <img src="./assets/cover.jpg" alt="1" width="70px" height="70px">
-                    <span>man meri jan</span>
-                    <span class="songlistplay"><span>05:34</span> <i class="fa-3x fa-solid fa-circle-play"></i></span>
+                    <span>man </span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-2x fa-solid fa-circle-play"></i></span> </span>
                 </div>
+                 <div class="songItem">
+                  <img src="./assets/cover.jpg" alt="1" width="70px" height="70px">
+                  <span>man </span>
+                  <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-2x fa-solid fa-circle-play"></i></span> </span>
+                </div>
+                <div class="songItem">
+                  <img src="./assets/cover.jpg" alt="1" width="70px" height="70px">
+                  <span>man </span>
+                  <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-2x fa-solid fa-circle-play"></i></span> </span>
               </div>
+              <div class="songItem">
+                <img src="./assets/cover.jpg" alt="1" width="70px" height="70px">
+                <span>man</span>
+                <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-2x fa-solid fa-circle-play"></i></span> </span>
+             </div>
+             <div class="songItem">
+               <img src="./assets/cover.jpg" alt="1" width="70px" height="70px">
+               <span>man </span>
+               <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-2x fa-solid fa-circle-play"></i></span> </span>
+             </div>
+             </div>
 
         </div>
         <div class="songBanner"></div>
       </div>
       <div class="bottom">
-        <input type="range" name="range" id= "myProgressbar" min="0" max="100">
+        <input type="range" name="range" id= "myProgressbar" min="0" value="0" max="100">
          <div class="icon">
             <i class="fa-3x fa-solid fa-backward"></i>
-            <i class="fa-3x fa-solid fa-circle-play"></i>
+            <i class="fa-3x fa-solid fa-circle-play " id="masterPlay"></i>
             <i class="fa-3x fa-solid fa-forward"></i>
+         </div>
+         <div class="songInfo">
+          <img src="./assets/playing.gif" alt="" width="60px" id="gif" >
          </div>
       </div>
      
